--- a/Day_068_Keras_Sequentail_Model_HW.ipynb
+++ b/Day_068_Keras_Sequentail_Model_HW.ipynb
@@ -17,18 +17,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-11-08 11:45:26.244351: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2021-11-08 11:45:26.244393: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 載入必須使用的 Library\n",
     "import keras\n",
@@ -40,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -71,14 +62,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# build our CNN model, 多加幾層\n",
     "model = Sequential()\n",
-    "model.add(Conv2D(64, (3, 3), padding='same',\n",
+    "model.add(Conv2D(32, (5, 5), padding='same',\n",
     "                 input_shape=x_train.shape[1:]))\n",
+    "model.add(Activation('relu'))\n",
+    "model.add(Conv2D(64, (5, 5)))\n",
+    "model.add(Activation('relu'))\n",
+    "\n",
+    "model.add(Conv2D(128, (5, 5)))\n",
+    "model.add(Activation('relu'))\n",
+    "\n",
+    "model.add(MaxPooling2D(pool_size=(2,2)))\n",
+    "\n",
     "model.add(Dense(512))\n",
     "model.add(Flatten())\n",
     "model.add(Dense(512))\n",
@@ -90,35 +90,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_2\"\n",
+      "Model: \"sequential_3\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_2 (Conv2D)            (None, 32, 32, 64)        1792      \n",
+      "conv2d_9 (Conv2D)            (None, 32, 32, 32)        2432      \n",
       "_________________________________________________________________\n",
-      "dense_6 (Dense)              (None, 32, 32, 512)       33280     \n",
+      "activation_11 (Activation)   (None, 32, 32, 32)        0         \n",
       "_________________________________________________________________\n",
-      "flatten_2 (Flatten)          (None, 524288)            0         \n",
+      "conv2d_10 (Conv2D)           (None, 28, 28, 64)        51264     \n",
       "_________________________________________________________________\n",
-      "dense_7 (Dense)              (None, 512)               268435968 \n",
+      "activation_12 (Activation)   (None, 28, 28, 64)        0         \n",
       "_________________________________________________________________\n",
-      "activation_4 (Activation)    (None, 512)               0         \n",
+      "conv2d_11 (Conv2D)           (None, 24, 24, 128)       204928    \n",
       "_________________________________________________________________\n",
-      "dropout_2 (Dropout)          (None, 512)               0         \n",
+      "activation_13 (Activation)   (None, 24, 24, 128)       0         \n",
       "_________________________________________________________________\n",
-      "dense_8 (Dense)              (None, 10)                5130      \n",
+      "max_pooling2d (MaxPooling2D) (None, 12, 12, 128)       0         \n",
       "_________________________________________________________________\n",
-      "activation_5 (Activation)    (None, 10)                0         \n",
+      "dense_3 (Dense)              (None, 12, 12, 512)       66048     \n",
+      "_________________________________________________________________\n",
+      "flatten_1 (Flatten)          (None, 73728)             0         \n",
+      "_________________________________________________________________\n",
+      "dense_4 (Dense)              (None, 512)               37749248  \n",
+      "_________________________________________________________________\n",
+      "activation_14 (Activation)   (None, 512)               0         \n",
+      "_________________________________________________________________\n",
+      "dropout_1 (Dropout)          (None, 512)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_5 (Dense)              (None, 10)                5130      \n",
+      "_________________________________________________________________\n",
+      "activation_15 (Activation)   (None, 10)                0         \n",
       "=================================================================\n",
-      "Total params: 268,476,170\n",
-      "Trainable params: 268,476,170\n",
+      "Total params: 38,079,050\n",
+      "Trainable params: 38,079,050\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
       "None\n"
