--- a/Day_092_CNN_theory_solution_HW_ANS.ipynb
+++ b/Day_092_CNN_theory_solution_HW_ANS.ipynb
@@ -16,16 +16,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**1. 若使用總共 128 個濾波器 (filters)，對一張 256x256 的影像做完卷積後，共會得到幾張特徵圖 (feature maps)？**\n",
-    "> 128"
+    "參考解答"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**2. 卷積神經網路中，濾波器的大小 (3x3 or 5x5) 與內部數字的值 (value) 是怎麼決定的呢？**\n",
-    "> 特徵從何而來？以及在全連結層中，我們該如何決定權重？如果我們得親手完成這些工作，CNNs 應該不會像現在一樣熱門。幸好，有個名叫反向傳播（backpropagation）的機器學習技巧可以幫助我們解決這個問題。"
+    "1. 共會有 128 張特徵圖。使用一個 filter 可以得到一張特徵圖，若使用 128 個 filter 則是 128 張0\n",
+    "2. 濾波器的大小設定是超參數 (hyper-parameter)，必須要先由我們給定，目前主流模型皆是用 3x3 或 5x5；濾波器中的值則是屬於參數 (weights)，是透過訓練資料學習而來"
    ]
   },
   {
@@ -38,7 +37,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -52,7 +51,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
