--- a/Day_093_CNN_Brief_HW.ipynb
+++ b/Day_093_CNN_Brief_HW.ipynb
@@ -77,27 +77,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_12\"\n",
+      "Model: \"sequential_14\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "dense_19 (Dense)             (None, 100)               78500     \n",
+      "dense_23 (Dense)             (None, 32)                25120     \n",
       "_________________________________________________________________\n",
-      "activation_18 (Activation)   (None, 100)               0         \n",
+      "dense_24 (Dense)             (None, 100)               3300      \n",
       "_________________________________________________________________\n",
-      "dense_20 (Dense)             (None, 10)                1010      \n",
+      "activation_22 (Activation)   (None, 100)               0         \n",
       "_________________________________________________________________\n",
-      "activation_19 (Activation)   (None, 10)                0         \n",
+      "dense_25 (Dense)             (None, 10)                1010      \n",
+      "_________________________________________________________________\n",
+      "activation_23 (Activation)   (None, 10)                0         \n",
       "=================================================================\n",
-      "Total params: 79,510\n",
-      "Trainable params: 79,510\n",
+      "Total params: 29,430\n",
+      "Trainable params: 29,430\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n",
       "None\n"
@@ -108,7 +110,8 @@
     "# build our CNN model, 多加幾層\n",
     "model = Sequential()\n",
     "#model.add(Input((28, 28, 1)))\n",
-    "model.add(Dense(100, input_shape=(784,)))\n",
+    "model.add(Dense(32, input_shape=(784,)))\n",
+    "model.add(Dense(100))\n",
     "model.add(Activation('relu'))\n",
     "model.add(Dense(10))\n",
     "model.add(Activation('softmax'))\n",
