--- a/Day_100_transfer_learning_HW.ipynb
+++ b/Day_100_transfer_learning_HW.ipynb
@@ -1,21 +1,198 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 作業\n",
+    "礙於不是所有同學都有 GPU ，這邊的範例使用的是簡化版本的 ResNet，確保所有同學都能夠順利訓練!\n",
+    "\n",
+    "\n",
+    "最後一天的作業請閱讀這篇非常詳盡的[文章](https://blog.gtwang.org/programming/keras-resnet-50-pre-trained-model-build-dogs-cats-image-classification-system/)，基本上已經涵蓋了所有訓練　CNN 常用的技巧，請使用所有學過的訓練技巧，盡可能地提高 Cifar-10 的 test data 準確率，截圖你最佳的結果並上傳來完成最後一次的作業吧!\n",
+    "\n",
+    "另外這些技巧在 Kaggle 上也會被許多人使用，更有人會開發一些新的技巧，例如使把預訓練在 ImageNet 上的模型當成 feature extractor 後，再拿擷取出的特徵重新訓練新的模型，這些技巧再進階的課程我們會在提到，有興趣的同學也可以[參考](https://www.kaggle.com/insaff/img-feature-extraction-with-pretrained-resnet)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2021-12-05 16:06:51.180223: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2021-12-05 16:06:51.180392: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from keras.datasets import cifar10\n",
+    "from keras.preprocessing.image import ImageDataGenerator\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tensorflow\n",
-    "from keras.datasets import cifar10\n",
-    "from resnet_builder import resnet # 這是從 resnet_builder.py 中直接 import 撰寫好的 resnet 函數\n",
+    "import keras\n",
+    "from keras.layers import Dense, Conv2D, BatchNormalization, Activation\n",
+    "from keras.layers import AveragePooling2D, Input, Flatten\n",
+    "from keras.regularizers import l2\n",
+    "from keras import backend as K\n",
     "from keras.models import Model\n",
     "from keras.utils.np_utils import to_categorical"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def resnet_layer(inputs,\n",
+    "                 num_filters=16,\n",
+    "                 kernel_size=3,\n",
+    "                 strides=1,\n",
+    "                 activation='relu',\n",
+    "                 batch_normalization=True,\n",
+    "                 conv_first=True):\n",
+    "    \"\"\"2D Convolution-Batch Normalization-Activation stack builder\n",
+    "    # Arguments\n",
+    "        inputs (tensor): input tensor from input image or previous layer\n",
+    "        num_filters (int): Conv2D number of filters\n",
+    "        kernel_size (int): Conv2D square kernel dimensions\n",
+    "        strides (int): Conv2D square stride dimensions\n",
+    "        activation (string): activation name\n",
+    "        batch_normalization (bool): whether to include batch normalization\n",
+    "        conv_first (bool): conv-bn-activation (True) or\n",
+    "            bn-activation-conv (False)\n",
+    "    # Returns\n",
+    "        x (tensor): tensor as input to the next layer\n",
+    "    \"\"\"\n",
+    "    conv = Conv2D(num_filters,\n",
+    "                  kernel_size=kernel_size,\n",
+    "                  strides=strides,\n",
+    "                  padding='same',\n",
+    "                  kernel_initializer='he_normal',\n",
+    "                  kernel_regularizer=l2(1e-4))\n",
+    "\n",
+    "    x = inputs\n",
+    "    if conv_first:\n",
+    "        x = conv(x)\n",
+    "        if batch_normalization:\n",
+    "            x = BatchNormalization()(x)\n",
+    "        if activation is not None:\n",
+    "            x = Activation(activation)(x)\n",
+    "    else:\n",
+    "        if batch_normalization:\n",
+    "            x = BatchNormalization()(x)\n",
+    "        if activation is not None:\n",
+    "            x = Activation(activation)(x)\n",
+    "        x = conv(x)\n",
+    "    return x\n",
+    "\n",
+    "def resnet(input_shape, depth=29, num_classes=10):\n",
+    "    \"\"\"ResNet Version 2 Model builder [b]\n",
+    "    Stacks of (1 x 1)-(3 x 3)-(1 x 1) BN-ReLU-Conv2D or also known as\n",
+    "    bottleneck layer\n",
+    "    First shortcut connection per layer is 1 x 1 Conv2D.\n",
+    "    Second and onwards shortcut connection is identity.\n",
+    "    At the beginning of each stage, the feature map size is halved (downsampled)\n",
+    "    by a convolutional layer with strides=2, while the number of filter maps is\n",
+    "    doubled. Within each stage, the layers have the same number filters and the\n",
+    "    same filter map sizes.\n",
+    "    Features maps sizes:\n",
+    "    conv1  : 32x32,  16\n",
+    "    stage 0: 32x32,  64\n",
+    "    stage 1: 16x16, 128\n",
+    "    stage 2:  8x8,  256\n",
+    "    # Arguments\n",
+    "        input_shape (tensor): shape of input image tensor\n",
+    "        depth (int): number of core convolutional layers\n",
+    "        num_classes (int): number of classes (CIFAR10 has 10)\n",
+    "    # Returns\n",
+    "        model (Model): Keras model instance\n",
+    "    \"\"\"\n",
+    "    if (depth - 2) % 9 != 0:\n",
+    "        raise ValueError('depth should be 9n+2 (eg 56 or 110 in [b])')\n",
+    "    # Start model definition.\n",
+    "    num_filters_in = 16\n",
+    "    num_res_blocks = int((depth - 2) / 9)\n",
+    "\n",
+    "    inputs = Input(shape=input_shape)\n",
+    "    # v2 performs Conv2D with BN-ReLU on input before splitting into 2 paths\n",
+    "    x = resnet_layer(inputs=inputs,\n",
+    "                     num_filters=num_filters_in,\n",
+    "                     conv_first=True)\n",
+    "\n",
+    "    # Instantiate the stack of residual units\n",
+    "    for stage in range(3):\n",
+    "        for res_block in range(num_res_blocks):\n",
+    "            activation = 'relu'\n",
+    "            batch_normalization = True\n",
+    "            strides = 1\n",
+    "            if stage == 0:\n",
+    "                num_filters_out = num_filters_in * 4\n",
+    "                if res_block == 0:  # first layer and first stage\n",
+    "                    activation = None\n",
+    "                    batch_normalization = False\n",
+    "            else:\n",
+    "                num_filters_out = num_filters_in * 2\n",
+    "                if res_block == 0:  # first layer but not first stage\n",
+    "                    strides = 2    # downsample\n",
+    "\n",
+    "            # bottleneck residual unit\n",
+    "            y = resnet_layer(inputs=x,\n",
+    "                             num_filters=num_filters_in,\n",
+    "                             kernel_size=1,\n",
+    "                             strides=strides,\n",
+    "                             activation=activation,\n",
+    "                             batch_normalization=batch_normalization,\n",
+    "                             conv_first=False)\n",
+    "            y = resnet_layer(inputs=y,\n",
+    "                             num_filters=num_filters_in,\n",
+    "                             conv_first=False)\n",
+    "            y = resnet_layer(inputs=y,\n",
+    "                             num_filters=num_filters_out,\n",
+    "                             kernel_size=1,\n",
+    "                             conv_first=False)\n",
+    "            if res_block == 0:\n",
+    "                # linear projection residual shortcut connection to match\n",
+    "                # changed dims\n",
+    "                x = resnet_layer(inputs=x,\n",
+    "                                 num_filters=num_filters_out,\n",
+    "                                 kernel_size=1,\n",
+    "                                 strides=strides,\n",
+    "                                 activation=None,\n",
+    "                                 batch_normalization=False)\n",
+    "            x = keras.layers.add([x, y])\n",
+    "\n",
+    "        num_filters_in = num_filters_out\n",
+    "\n",
+    "    # Add classifier on top.\n",
+    "    # v2 has BN-ReLU before Pooling\n",
+    "    x = BatchNormalization()(x)\n",
+    "    x = Activation('relu')(x)\n",
+    "    x = AveragePooling2D(pool_size=8)(x)\n",
+    "    y = Flatten()(x)\n",
+    "    outputs = Dense(num_classes,\n",
+    "                    activation='softmax',\n",
+    "                    kernel_initializer='he_normal')(y)\n",
+    "\n",
+    "    # Instantiate model.\n",
+    "    model = Model(inputs=inputs, outputs=outputs)\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -45,17 +222,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2021-12-04 16:20:19.862841: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
-      "2021-12-04 16:20:19.862927: W tensorflow/stream_executor/cuda/cuda_driver.cc:269] failed call to cuInit: UNKNOWN ERROR (303)\n",
-      "2021-12-04 16:20:19.862983: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (11402.pyspark3): /proc/driver/nvidia/version does not exist\n",
-      "2021-12-04 16:20:19.863353: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2021-12-05 16:11:53.812898: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
+      "2021-12-05 16:11:53.813126: W tensorflow/stream_executor/cuda/cuda_driver.cc:269] failed call to cuInit: UNKNOWN ERROR (303)\n",
+      "2021-12-05 16:11:53.813254: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (11402.pyspark3): /proc/driver/nvidia/version does not exist\n",
+      "2021-12-05 16:11:53.814802: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     },
@@ -291,77 +468,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-12-04 16:25:41.849731: W tensorflow/core/framework/cpu_allocator_impl.cc:80] Allocation of 614400000 exceeds 10% of free system memory.\n",
-      "2021-12-04 16:25:43.989751: I tensorflow/compiler/mlir/mlir_graph_optimization_pass.cc:185] None of the MLIR Optimization Passes are enabled (registered 2)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/30\n",
-      "782/782 [==============================] - 569s 724ms/step - loss: 1.8209 - accuracy: 0.5170 - val_loss: 1.7724 - val_accuracy: 0.5121\n",
-      "Epoch 2/30\n",
-      "782/782 [==============================] - 595s 761ms/step - loss: 1.3284 - accuracy: 0.6596 - val_loss: 1.3559 - val_accuracy: 0.6380\n",
-      "Epoch 3/30\n",
-      "782/782 [==============================] - 591s 756ms/step - loss: 1.1251 - accuracy: 0.7188 - val_loss: 1.3797 - val_accuracy: 0.6430\n",
-      "Epoch 4/30\n",
-      "782/782 [==============================] - 583s 746ms/step - loss: 0.9915 - accuracy: 0.7622 - val_loss: 1.1841 - val_accuracy: 0.6882\n",
-      "Epoch 5/30\n",
-      "782/782 [==============================] - 620s 794ms/step - loss: 0.8908 - accuracy: 0.7929 - val_loss: 1.0573 - val_accuracy: 0.7355\n",
-      "Epoch 6/30\n",
-      "782/782 [==============================] - 82488s 106s/step - loss: 0.8146 - accuracy: 0.8187 - val_loss: 1.3173 - val_accuracy: 0.6869\n",
-      "Epoch 7/30\n",
-      "605/782 [======================>.......] - ETA: 2:27 - loss: 0.7496 - accuracy: 0.8424"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "batch_size = 64 # batch 的大小，如果出現 OOM error，請降低這個值\n",
     "num_classes = 10 # 類別的數量，Cifar 10 共有 10 個類別\n",
     "epochs = 30 # 訓練整個資料集共 30個循環\n",
+    "learning_rate = 1e-3\n",
     "\n",
     "model.compile(loss='categorical_crossentropy',\n",
     "              optimizer=tensorflow.keras.optimizers.Adam(),\n",
-    "              metrics=['accuracy'])\n",
-    "\n",
-    "history = model.fit(x_train, y_train,\n",
-    "                    batch_size=batch_size,\n",
-    "                    epochs=epochs,\n",
-    "                    verbose=1,\n",
-    "                    validation_data=(x_test, y_test))\n",
-    "score = model.evaluate(x_test, y_test, verbose=0)\n",
-    "print('Test loss:', score[0])\n",
-    "print('Test accuracy:', score[1])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 作業\n",
-    "礙於不是所有同學都有 GPU ，這邊的範例使用的是簡化版本的 ResNet，確保所有同學都能夠訓練!\n",
-    "\n",
-    "最後一天的作業請閱讀這篇[非常詳盡的文章](https://blog.gtwang.org/programming/keras-resnet-50-pre-trained-model-build-dogs-cats-image-classification-system/)，基本上已經涵蓋了所有訓練　CNN 常用的技巧，請使用所有學過的訓練技巧，盡可能地提高 Cifar-10 的 test data 準確率，截圖你最佳的結果並上傳來完成最後一次的作業吧!\n",
-    "\n",
-    "另外這些技巧在 Kaggle 上也會被許多人使用，更有人會開發一些新的技巧，例如使把預訓練在 ImageNet 上的模型當成 feature extractor 後，再拿擷取出的特徵重新訓練新的模型，這些技巧再進階的課程我們會在提到，有興趣的同學也可以[參考](https://www.kaggle.com/insaff/img-feature-extraction-with-pretrained-resnet"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 進階挑戰!\n",
-    "有志以成為機器學習工程師為目標的同學們可以參加這個挑戰，這[網站](https://rodrigob.github.io/are_we_there_yet/build/classification_datasets_results.html#43494641522d3130)記錄了歷年來 Cifar-10 中排名最高的論文，請試著閱讀論文並撰寫出相對應的程式碼，復現出論文的結果。\n",
-    "\n",
-    "這樣的能力在機器學習領域中是非常重要的，具備閱讀他人論文並實現的能力，可為自己在履歷上增添不少分數，當然難度也相當高，若是不透徹了解文章內容或是程式能力不夠紮實，可是不能復現別人辛苦的研究成果的喔! 就請各位同學好好努力，往自己的機器學習之路邁進吧:)"
+    "              metrics=['accuracy'])"
    ]
   },
   {
@@ -369,7 +487,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train_datagen = ImageDataGenerator(rotation_range=15,\n",
+    "                                   width_shift_range=0.1,\n",
+    "                                   height_shift_range=0.1,\n",
+    "                                   shear_range=0.1,\n",
+    "                                   zoom_range=0.1,\n",
+    "                                   horizontal_flip=True)\n",
+    "\n",
+    "train_datagen.fit(x_train)\n",
+    "# fits the model on batches with real-time data augmentation:\n",
+    "model.fit_generator(train_datagen.flow(x_train, y_train, batch_size=batch_size),\n",
+    "         validation_data=(x_test, y_test),\n",
+    "            epochs=epochs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "score = model.evaluate(x_test, y_test, verbose=0)\n",
+    "print('Test loss:', score[0])\n",
+    "print('Test accuracy:', score[1])"
+   ]
   }
  ],
  "metadata": {
